<resources>
    <string name="app_name">Notes</string>
    <string name="mainfragment">MainFragment</string>

    <string name="label_note_title">Title</string>
    <string name="hint_note_title">A Note title</string>
    <string name="label_note">Note</string>
    <string name="hint_note_text">Write a Note</string>
    <string name="label_tag">Tag</string>
    <string name="hint_note_tag">Tag (0, 1, 2)</string>
    <string name="label_reminder">Reminder</string>
    <string name="hint_note_reminder">Reminder</string>
    <string name="label_save">Save</string>
    <string name="login_error_title">Login error</string>
    <string name="login_required_title">Login required</string>
    <string name="login_required_message">You have to log in to use the app</string>
    <string name="sign_out_menu">Sign out</string>
</resources>
